# fenfire

./: .gitignore  .subuser.json  Cache.hs  Cairo.fhs  DaisyData.txt  Darcs2RDF.fhs  Dockerfile  Fenfire.fhs  FunctorSugar.hs  FunctorTest.fhs  Makefile  RDF.hs  README  RESURECTION-NOTES.md  Raptor.chs  ReadMe.rst  Setup.hs  Utils.hs  VobTest.fhs  Vobs.fhs  Vobs.hs  container-init.sh  fenfire.cabal  sources.list  test.nt
Fenfire/: Cache.hs  Cairo.fhs  Darcs2RDF.fhs  FRP.fhs  FunctorTest.fhs  GtkFixes.chs.bk  Irc2Notetaker.hs  Irc2RDF.hs  Latex2Png.hs  Main.hs  RDF.hs  Raptor.chs  URN5.hs  Utils.hs  VanishingView.fhs  VobTest.fhs  Vobs.fhs
Preprocessor/: Hsx.hi  Hsx.hs  Main.hi  Main.hs
Preprocessor/Hsx/: Build.hi  Build.hs  Lexer.hi  Lexer.hs  ParseMonad.hi  ParseMonad.hs  ParseUtils.hi  ParseUtils.hs  Parser.hi  Parser.hs  Parser.ly  Pretty.hi  Pretty.hs  Syntax.hi  Syntax.hs  Transform.hi  Transform.hs
subuser/fenfire/: permissions.json
subuser/fenfire-dev/: permissions.json
subuser/fenfire-dev/image/: SubuserImagefile
