Name:           fenfire
Version:        0.2
License:        GPL
License-file:   LICENSE
Author:         Benja Fallenstein and Tuukka Hastrup
Maintainer:     fenfire-dev@nongnu.org
Synopsis:       Graph-based notetaking system
Description:    Fenfire is a graph-based notetaking system. (We're
                planning to add a kitchen sink soon.) It is developed 
                on the channel #fenfire on the Freenode IRC network.
Category:       User Interfaces
Stability:      alpha
Homepage:       http://fenfire.org/
Build-Depends:
  base
 ,HaXml
 ,gtk
 ,mtl
 ,unix
 ,cairo
 ,harp
 ,template-haskell
 ,glib
 ,network
 ,HList
 ,containers
 ,syb
 ,bytestring
 ,old-time
 ,directory
 ,process
 ,random


build-type: Custom
Data-Files: data-files/logo.svg data-files/icon16.png

Executable: fenfire
Main-Is: Fenfire/Main.hs
Extra-Libraries: raptor
GHC-Options:  -main-is Fenfire.Main.main

Other-Modules:
  Fenfire
 ,FunctorSugar
 ,Fenfire.Raptor
 ,Fenfire.Utils
 ,Fenfire.Cairo
 ,Fenfire.Cache
 ,Fenfire.Vobs
 ,Fenfire.VanishingView
 ,Fenfire.Main
---- ,Fenfire.GtkFixes

